fixed alignment of boxes

--- a/style/module.css
+++ b/style/module.css
@@ -60,6 +60,7 @@
         width: 200px;
         height: 600px;
         line-height: 600px;
+
     }
     .container{
         display: flex;
@@ -73,7 +74,6 @@
     #e, #f, #g, #h{
         width: 190px;
         height: 250px; 
-        float: right;
     }
     #i{
         width: 760px;
@@ -81,14 +81,19 @@
         line-height: 150px;
         display: flex;
         justify-content: right;
+
     }
     #c-h{
         display: flex;
         flex-wrap: wrap;
         align-content: flex-start;
     }
-
-}
+    .e-h{
+        position: relative;
+        float: right;
+        left: 200px;
+        bottom: 400px;
+    }
 
 @media(min-width: 960px){
     main{
